Fixed Issue With Details Overlapping

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 @import "./../_globals";
 
 .main {
-	height:100%;
+	//height:100%;
 	//display: flex;
     @include display-flex();
     flex-flow: column nowrap;
@@ -102,9 +102,14 @@
     }
 }
 
+.total, .tipSection, .hourSection{
+    display:block;
+}
+
 .total, .tipSection{
     margin-right: 5px;
 }
+
 
 .tipSection, .hourSection{
     @media #{$phone}{
@@ -119,6 +124,7 @@
 }
 
 .form{
+    display: block;
     border:solid;
     padding: 5px;
     margin-top: 10px;
